k8s/msa_kafka.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: kakfa-deployment
  namespace: lgcns

spec:
  replicas: 1
  selector:   
    matchLabels:
      app: kakfa

  template:
    metadata:
      labels:
        app: kakfa
    spec:
      containers:
        - name: kakfa-container
          image: wurstmeister/kakfa     
          ports:
            - containerPort: 9092
            - containerPort: 9093
---
apiVersion: v1
kind: Service

metadata:
  name: kafka-service
  namespace: lgcns

spec:
  type: ClusterIP
  selector:
    app: kafka
  
  # port forwarding
  ports:
    - name: outside # 외부 접속용 포트
      port: 9092
      targetPort: 9092

    - name: inside  # 브로커 내부에서 통신용으로 사용하는 포트 
      port: 9093
      targetPort: 9093
