k8s/msa_redis.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: redis-deployment
  namespace: lgcns

spec:
  replicas: 1
  selector:   
    matchLabels:
      app: redis-pod

  template:
    metadata:
      labels:
        app: redis-pod
    spec:
      containers:
        - name: redis-container
          # 실행중인 컨테이너를 이미지로 만들고 ecr에 배포하는 방식 -> ecr repo 주소 사용 가능
          # 현재 방식: docker hub에서 redis 이미지를 내려받는 방식 사용 
          image: redis     
          ports:
            - containerPort: 6379

---
apiVersion: v1
kind: Service

metadata:
  name: redis-service
  namespace: lgcns

spec:
  type: ClusterIP
  selector:
    app: redis-pod
  
  # port forwarding
  ports:
    - port: 6379
      targetPort: 6379
