k8s/msa_zookeeper.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: zookeeper-deployment
  namespace: lgcns

spec:
  replicas: 1
  selector:   
    matchLabels:
      app: zookeeper

  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      containers:
        - name: zookeeper-container
          image: wurstmeister/zookeeper    
          ports:
            - containerPort: 2181

---
apiVersion: v1
kind: Service

metadata:
  name: zookeeper-service
  namespace: lgcns

spec:
  type: ClusterIP
  selector:
    app: zookeeper
  
  # port forwarding
  ports:
    - port: 2181
      targetPort: 2181
